# Amara

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CompiledStructure.md  CompilerStructure.md  README.md  f.hbc  f.js  internalFunctions.js  package.json  pnpm-workspace.yaml  tsconfig.json  turbo.json
Amara/: CMakeLists.txt  package.json  r.cpp
Amara/include/amara/: AmaraArray.h  BaseEngine.h  ComponentContext.h  Key.h  ObjectMap.h  ValueWrapper.h  WidgetHolder.h
Amara/include/amara/hermes/: AmaraEngine.h  ByteBuffer.h  HermesValueWrapper.h
Amara/include/amara/platform/: FileManagment.h
Amara/include/amara/widgets/: ButtonWidget.h  ImageWidget.h  TextWidget.h  ViewWidget.h  Widget.h
Amara/old/: Element.h  Engine.cpp  Engine.h  Widget.h
Amara/platform/windows/: CMakeLists.txt
Amara/runtime/: AmaraArray.h  IEngine.h  Invoker.h  PropMap.h  WidgetHolder.h  macros.h
Amara/runtime/hermes/: Engine.cpp  Engine.h  HermesArray.cpp  HermesArray.h  HermesPropMap.cpp  HermesPropMap.h  HermesWidgetHolder.cpp  HermesWidgetHolder.h  InstallEngine.cpp  InstallEngine.h  Invoker.h  StateWrapper.h  WidgetHostWrapper.cpp  WidgetHostWrapper.h
Amara/src/: ComponentContext.cpp
Amara/src/hermes/: AmaraEngine.cpp
Amara/ui/: ComponentContext.cpp  ComponentContext.h  Key.h  Widget.cpp  Widget.h
Amara/utils/: ScopedTimer.h  WidgetPool.h
Amara/utils/css/: BorderInfo.h  Color.h  CssUtils.cpp  CssUtils.h  Style.cpp  Style.h
