cmake_minimum_required(VERSION 3.26)
project(Amara)
set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GL /Gw")
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /OPT:REF /OPT:ICF")
add_subdirectory(external)
set(MASHARIF_CORE "${CMAKE_CURRENT_SOURCE_DIR}\\external\\Masharif" "Path to Masharif")
set(HERMES_SRC_DIR "E:\\work\\repos_i_wont_use\\hermes")
set(HERMES_BUILD_DIR "E:\\work\\repos_i_wont_use\\hermes\\cmake-build-debug\\")
add_subdirectory(Amara)
